--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,46 @@
 /*banner*/
-#banner{width:100%;}
-#banner_box li{float: left;}
-#banner_box li img{width:100%;height:420px}
-#test{
-	height:500px;
-}
+#banner{width:100%;height:420px;position: relative;overflow:hidden}
+.banner_con_img{width:100%;height:100%;position: absolute;}
+.banner_con_tip{height:20px;line-height: 20px;font-size: 12px;background:#fff;color:#333333;display: none;position: absolute;box-shadow:1px 1px 1px 1px #969896 ;}
+#bg{width:100%;height: 100%;position: absolute;left: 0;top:0;}
+#banner_con{width:1090px;height:420px;margin:0 auto;}
+#banner_con .list{width:210px;position: absolute;left:43%;;bottom:30px;height:20px;}
+#banner_con .list li{float:left;display:block;width:20px;height: 20px;border-radius: 10px;background:#7F7F7F;color:#000;font-size: 14px;margin:0 5px;text-align: center;}
+#banner_con .list li.active{background: #A88049;}
+#banner .leftBtn,.rightBtn{width:40px;height: 40px;background:#A7936E;opacity:.5;border-radius: 20px;position: absolute;top:160px;}
+#banner .leftBtn{left:13%}
+#banner .rightBtn{left:80%}
+#banner_con span i{font-size: 40px!important;color:#fff;text-align: center;}
+#banner .leftBtn:hover{opacity: 1;}
+#banner .rightBtn:hover{opacity: 1;}
+.xiaotiao{width : 28px;height : 3px;background : #b4a078;position : absolute;top : 22px;left : 26px}
+#nav_con .nav_ul li:first-of-type a{color:#b4a078}
+
+
+/*品牌制造商*/
+#pinpai{margin:30px;height:368px;}
+#pinpai_con{width:1090px;margin: 0 auto;position: relative;}
+#pinpai_header{height: 48px;padding-bottom:20px ;}
+.pinpai_header_l{float: left;}
+.pinpai_header_l .name{font-size: 28px;font-weight: 900;line-height: 1;float: left;margin-right: 20px;color:#333333;}
+.pinpai_header_l .frontName{padding-top:13px;line-height: 1;font-size: 14px;display: inline-block;}
+.pinpai_header_r{display: inline-block;line-height: 1;margin-left:30px;padding-top:14px;font-size: 14px ;float: right;color: #333;}
+#pinpai_bottom{padding-bottom: 20px;}
+#pinpai_bottom .ppb1{width:357px;float: left;;margin-right: 12px;position: relative;height: 320px;}
+.ppb1 .mask{position: absolute;left: 0;top: 0;background: #ccc;width:100%;height:320px;opacity: .3;z-index: 2;}
+.ppb1 .name{margin-left: 100px;margin-bottom: 20px;height:29px;margin-top: 50px;}
+.ppb1 .name span:first-of-type{font-size: 22px;color: #333;float: left;}
+.ppb1 .name span:last-of-type{font-size: 12px;color:#fff;width:30px;height:15px;background: red;opacity: .5;border-radius: 5px;margin-bottom: 13px;float: left;}
+.ppb1 .price{clear: left;margin-left: auto ;margin-right: auto;font-size: 14px;color: #333;height:54px;line-height: 54px;width:45px;border-top: 1px solid #333;}
+.ppImg{position: absolute;left: 0;top: 0;}
+.ppImg img{text-align: center;z-index: 1;opacity: .5;transition: 1s}
+.ppb3{width:351px;height: 155px;position: relative;float: left;}
+.ppb3 .mask{position: absolute;left: 0;top: 0;background: #ccc;width:100%;height:155px;opacity: .3;z-index: 2;}
+.ppb3 .name{position: absolute;left: 20px;top: 32px;}
+.ppb3 .name span:first-of-type{font-size: 20px;color: #333;float: left;}
+.ppb3 .name span:last-of-type{font-size: 12px;color:#fff;width:30px;height:15px;background: red;opacity: .5;border-radius: 5px;margin-bottom: 13px;float: left;}
+.ppb3 .price{font-size: 14px;color: #333;height:50px;line-height: 50px;width:45px;border-top: 1px solid #333;position: absolute;top: 65px;left: 20px;}
+#pinpai_bottom .p3{margin-bottom: 10px;}
+#pinpai_bottom a{overflow: hidden;}
+#pinpai_header a:hover{color:#b4a078}
+.pinpai_header_l h3:hover{color:#b4a078}
